--- a/03-class-02.Rmd
+++ b/03-class-02.Rmd
@@ -385,7 +385,10 @@ When you decide that “under €1,500” means “Low-Income” you’re interp
 
 
 
+## Exercise {-}
 
+- **Exercise 02**: **[download Rmd](exercises/ex02/ex02.Rmd)**  
+- Upload via **Assignments** page on Moodle.
 
 
 
