--- a/91-datasets.Rmd
+++ b/91-datasets.Rmd
@@ -5,6 +5,7 @@ Place your data files in the `data/` folder. Use links below so students can dow
 
 - **finSESCo_sample.csv** – [Download](data/finSESCo_sample.csv)  
 - **energy_usage_demo.csv** – [Download](data/energy_usage_demo.csv)
+- **CODEBOOK** – [Download](data/codebook.xlsx)
 
 ```{r}
 # Small preview example
