--- a/01-syllabus.Rmd
+++ b/01-syllabus.Rmd
@@ -38,5 +38,6 @@ Christina E. Hoicka, Jens Lowitzsch, Marie Claire Brisbois, Ankit Kumar and Luis
 <iframe src="https://drive.google.com/file/d/14b2cZH0DO4aa2UYZPSXXXOMKhVFkvz6H/preview"
         width="640" height="360" allow="autoplay"></iframe>
 
+THIS LINK >>>> https://miro.com/welcomeonboard/djFRTGV0OHBnUzZ6QnRKOEl5OG51aHZhTU16ZmVvdWRLdHBuOTJ6Ulg5STJxTGlJYkhSajFYc1FPOSt6RDZMMmlTTlJ2SUNVWWtEa0QrVVJUTnlKSFJaUjlaMnJLWTZUQi9TQjEwaVRWQnR6U2Yxb1V5dWRNaXpaUUk0QVh4bXhQdGo1ZEV3bUdPQWRZUHQzSGl6V2NBPT0hdjE=?share_link_id=830981808939
 
 
