Added Sessions 3 and 4

--- a/04-class-03.Rmd
+++ b/04-class-03.Rmd
@@ -850,7 +850,10 @@ moving from **descriptive visuals** to **statistical inference**, where we ask w
 
 
 
+## Exercise {-}
 
+- **Exercise 03**: **[Download PDF](exercises/ex03/ex03.Rmd)**  
+- Upload via **Assignments** page on Moodle.
 
 
 
